fix: dark mode tag 지정 안된거 수정

--- a/kimye-log/components/live-editor/live-editor.module.css
+++ b/kimye-log/components/live-editor/live-editor.module.css
@@ -5,7 +5,7 @@
 .container {
   position: relative;
   background-color: var(--bg-frost-white);
-  color: var(--text-white);
+  color: var(--text-black);
   width: 100vw;
   height: calc(100vh - var(--section-padding));
   display: flex;
